# server/api/v1.js
@@ -77,7 +77,7 @@ function authorize(req, res, next) {
     req.params[key] = param.value;
   });
 
-  if (req.url !== '/token') {
+  if (req.url !== '/token' && req.url !== '/login') {
     authorization(authorizer, req, res, next);
   } else {
     next();
